# learning-rust

./: .gitignore  main.rs  make.py
chap3/: rust.py
chap3/src/: fib.rs  main.rs
chap4/src/: main.rs  slices.rs
chap5/src/: main.rs  rectangles.rs
chap6/src/: coins.rs  enums.rs  main.rs
chap7/: notes.md
chap7/better_restaurant/: Cargo.toml
chap7/better_restaurant/src/: lib.rs
chap7/resturant/src/: lib.rs
guessing_game/: Cargo.toml  rust.py
guessing_game/src/: main.rs
hello_cargo/: rust.py
