[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

[dependencies]
# supports semanic versioning (semVer)
# https://semver.org/
# so the bellow line means any version that is at leas 0.8.5 but below 0.9.0
# because 1.0.0 hasnt been released, the public API may change in the minor version. 
rand = "0.8.5"


# rust crate registry
# https://crates.io/